@@ -37,6 +37,11 @@ They can be used to set the following global variables:
 
 - METHODS: What modules to use.
 
+- SORT_OUTPUT: Set this to "false" or "no" and lbdbq won't sort the
+  addresses alphabetically by email address but returns them in
+  reverse order (which means that the most recent address in m_inmail
+  database is first).
+
 Note that there _are_ defaults, so you should most probably modify
 these variables using constructs like this:
 
