@@ -19,8 +19,12 @@ lbdb (0.18.6) unstable; urgency=low
     (/usr/bin/awk is handled by alternates mechanism to point to the
     "optimal" awk replacement).
   * Speed up munge (nearly two times as fast as previous version).
+  * Add option SORT_OUTPUT to lbdb.rc, which can be set to "false" or
+    "no".  This implies that lbdbq doesn't sort the output but reverts its
+    order, so the most recent addresses from m_inmail.list will be shown
+    first.  Thanks to Andrew Over <aover@uq.net.au> for this idea.
 
- -- Roland Rosenfeld <roland@debian.org>  Mon,  8 May 2000 18:18:10 +0200
+ -- Roland Rosenfeld <roland@debian.org>  Mon,  8 May 2000 19:16:09 +0200
 
 lbdb (0.18.5) unstable; urgency=low
 
